20160514 accessor.pl,doc/libspectrum.txt,sna.c,snap_accessors.txt,snapshot.c,
         szx.c,z80.c: add skeleton of support for Didaktik 80 MDOS 1 snapshots
         (patch #364) (Fred).
20160521 szx.c: reset uncompressed size when loading Opus and +D custom ROM
         (from patch #366) (Sergio).
20160529 README,doc/libspectrum.3: update release dates (Fred).
20160529 configure.ac: mark this release as 1.2.0-pre1 (Fred).
20160530 doc/libspectrum.txt: list more disk formats (Sergio).
20160606 ChangeLog,README,configure.ac,doc/libspectrum.3: update release dates
         and mark this release as 1.2.0 (Fred).
20160622 make-perl.c,myglib/garray.c: add implementations of
         g_array_sized_new() and g_array_remove_index_fast() (thanks, Sergio)
         (Phil).
20160709 ChangeLog,README,configure.ac,doc/{libspectrum.3,libspectrum.txt}: 
         bump some version numbers for 1.2.1 release (Fred).
20160710 README,Makefile.am,configure.ac,doc/libspectrum.3: bump release dates,
         mark release as 1.2.1-pre1 and bump libtool version (Fred).
20160712 Makefile.am: add comments on assigning libtool version (thanks, Sergio)
         (Fred).
20160717 ChangeLog,README,configure.ac,doc/libspectrum.3: update release dates
         and mark this release as 1.2.1 (Fred).
20160719 myglib/ghash.c: mark g_direct_hash() as static as it isn't used outside
         of ghash.c and isn't in a header (Fred).
20160721 tape.c,tape_block.c,test/{Makefile.am,test.[ch],test15.c->test_edges.c,
         zero-tail.pzx}: fix handling of 0 length tail pulses after PZX data
         blocks and ensure the first PZX pulse block pulse is marked as high or
         low level as required (Fred).
20160722 Makefile.am,internals.h,libspectrum.c,libspectrum.h.in,zip.[ch],zlib.c:
         add support for reading zip files (patch #343) (Patrik Rak and Sergio).
20160722 zip.[ch]: use libspectrum functions for reading LSB values (Fred).
20160722 zip.c: mark a bunch of internal functions as static (Fred).