@@ -42,7 +42,7 @@ enum {
 };
 
 /* Seek safely within ZIP archive */
-static int
+static libspectrum_error
 seek( struct libspectrum_zip *z, long offset, int whence )
 {
   const libspectrum_byte *ptr;
@@ -61,24 +61,24 @@ seek( struct libspectrum_zip *z, long offset, int whence )
     break;
 
   default:
-    return -1;
+    return LIBSPECTRUM_ERROR_CORRUPT;
   }
 
   /* Validate address */
   if( ptr < z->input_data || ptr > z->end )
-    return -1;
+    return LIBSPECTRUM_ERROR_CORRUPT;
 
   z->ptr = ptr;
 
-  return 0;
+  return LIBSPECTRUM_ERROR_NONE;
 }
 
-static int
+static libspectrum_error
 read_directory_info( zip_directory_info *info, const libspectrum_byte *buffer,
                      const libspectrum_byte *end )
 {
   if( buffer + ZIP_DIRECTORY_INFO_SIZE > end ) {
-    return 0;
+    return LIBSPECTRUM_ERROR_CORRUPT;
   }
 
   info->magic                = libspectrum_read_dword( &buffer );
@@ -90,7 +90,7 @@ read_directory_info( zip_directory_info *info, const libspectrum_byte *buffer,
   info->directory_offset     = libspectrum_read_dword( &buffer );
   info->comment_size         = libspectrum_read_word( &buffer );
 
-  return ZIP_DIRECTORY_INFO_SIZE;
+  return LIBSPECTRUM_ERROR_NONE;
 }
 
 static int
@@ -167,12 +167,13 @@ close_zip( struct libspectrum_zip *z )
 }
 
 /* Locate the ZIP central directory info */
-static int
+static libspectrum_error
 locate_directory_info( struct libspectrum_zip *z, zip_directory_info *info )
 {
-  if( seek( z, -ZIP_DIRECTORY_INFO_SIZE, SEEK_END ) ) {
-    return 1;
-  }
+  libspectrum_error error;
+
+  error = seek( z, -ZIP_DIRECTORY_INFO_SIZE, SEEK_END );
+  if( error ) return error;
 
   /* Such a horrible mess just because of the stupid variable size comment at
      the end. Sigh. */
@@ -180,40 +181,39 @@ locate_directory_info( struct libspectrum_zip *z, zip_directory_info *info )
     if( z->ptr[0] == 'P' &&
         z->ptr[1] == 'K' &&
         z->ptr[2] == 5  &&
-        z->ptr[3] == 6 )
-    {
-      if( read_directory_info( info, z->ptr, z->end ) != 0 ) {
-        return 0;
-      }
+        z->ptr[3] == 6 ) {
+      error = read_directory_info( info, z->ptr, z->end );
+      if( error ) return error;
     }
 
     z->ptr--;
   }
 
-  return 1;
+  return LIBSPECTRUM_ERROR_NONE;
 }
 
 /* Locate the ZIP central directory */
-static int
+static libspectrum_error
 locate_directory( struct libspectrum_zip *z )
 {
+  libspectrum_error error;
+
   if( z->directory_offset != 0 ) {
-    return 0;
+    return LIBSPECTRUM_ERROR_NONE;
   }
 
   zip_directory_info info;
-  if( locate_directory_info( z, &info ) ) {
-    return 1;
-  }
+  error = locate_directory_info( z, &info );
+  if( error ) return error;
 
   if( info.disk_index != info.directory_disk_index ) {
-    return 1;
+    return LIBSPECTRUM_ERROR_CORRUPT;
   }
 
   z->directory_offset = info.directory_offset;
   z->file_count = MIN( info.disk_file_count, info.file_count );
 
-  return 0;
+  return LIBSPECTRUM_ERROR_NONE;
 }
 
 /* Get the number of entries in the archive (files and directories) */
@@ -227,12 +227,13 @@ libspectrum_zip_num_entries( struct libspectrum_zip *z )
 libspectrum_error
 libspectrum_zip_rewind( struct libspectrum_zip *z )
 {
+  libspectrum_error error;
+
   if( !z || z->state == ARCHIVE_CLOSED )
     return LIBSPECTRUM_ERROR_INVALID;
 
-  if( seek( z, z->directory_offset, SEEK_SET ) ) {
-    return LIBSPECTRUM_ERROR_CORRUPT;
-  }
+  error = seek( z, z->directory_offset, SEEK_SET );
+  if( error ) return error;
 
   z->file_index = 0;
   z->state = ARCHIVE_OPEN;
@@ -283,18 +284,15 @@ read_directory( struct libspectrum_zip *z )
     if( name_size < sizeof( z->file_name ) ) {
       memcpy( z->file_name, z->ptr, name_size );
       z->file_name[ name_size ] = 0;
-    }
-    else {
+    } else {
       retry = 1;
     }
 
     skip += name_size;
 
     /* Skip to the next file header if necessary */
-    if( skip > 0 ) {
-      if( seek( z, skip, SEEK_CUR ) ) {
-        return 1;
-      }
+    if( skip > 0 && seek( z, skip, SEEK_CUR ) ) {
+      return 1;
     }
 
   } while( retry );
@@ -307,6 +305,7 @@ struct libspectrum_zip *
 libspectrum_zip_open( const libspectrum_byte *buffer, size_t length )
 {
   struct libspectrum_zip *z;
+  libspectrum_error error;
 
   if( !buffer || !length ) return NULL;
 
@@ -317,14 +316,15 @@ libspectrum_zip_open( const libspectrum_byte *buffer, size_t length )
   z->data_size = length;
   z->state = ARCHIVE_OPEN;
 
-  if( locate_directory( z ) ) {
-    fprintf( stderr, "Unrecognized ZIP archive\n" );
+  error = locate_directory( z );
+  if( error ) {
+    libspectrum_print_error( error, "Unrecognized ZIP archive" );
 
     libspectrum_zip_close( z );
     return NULL;
   }
 
-  if( libspectrum_zip_rewind( z ) != LIBSPECTRUM_ERROR_NONE ) {
+  if( libspectrum_zip_rewind( z ) ) {
     libspectrum_zip_close( z );
     return NULL;
   }
@@ -353,18 +353,15 @@ dump_entry_stat( struct libspectrum_zip *z, zip_stat *info )
 int
 libspectrum_zip_next( struct libspectrum_zip *z, zip_stat *info )
 {
-  int retval;
-
   if( !z || z->state == ARCHIVE_CLOSED ) {
-    return LIBSPECTRUM_ERROR_INVALID;
+    return 1;
   }
 
-  retval = read_directory( z );
-  if( retval ) return LIBSPECTRUM_ERROR_UNKNOWN;
+  if( read_directory( z ) ) return 1;
 
   dump_entry_stat( z, info );
 
-  return LIBSPECTRUM_ERROR_NONE;
+  return 0;
 }
 
 /* Locate a file in the archive (non-sequential acces) */
@@ -381,7 +378,7 @@ libspectrum_zip_locate( struct libspectrum_zip *z, const char *filename,
 
   if( !filename || strlen( filename ) == 0 ) return -1;
 
-  if( libspectrum_zip_rewind( z ) != LIBSPECTRUM_ERROR_NONE ) {
+  if( libspectrum_zip_rewind( z ) ) {
     close_zip( z );
     return -1;
   }
@@ -428,36 +425,37 @@ libspectrum_zip_close( struct libspectrum_zip *z )
 }
 
 /* Prepare stream for reading from ZIP archive */
-static int
+static libspectrum_error
 prepare_stream( struct libspectrum_zip *z )
 {
   zip_local_header header;
   int retval;
   libspectrum_dword skip;
   libspectrum_word version;
+  libspectrum_error error;
 
   /* Seek to the local header and read it */
-  if( seek( z, z->file_info.file_offset, SEEK_SET ) ) {
-    return 1;
-  }
+  error = seek( z, z->file_info.file_offset, SEEK_SET );
+  if( error ) return error;
 
   retval = read_local_header( &header, z->ptr, z->end );
   if( !retval ) {
-    return 1;
+    return LIBSPECTRUM_ERROR_CORRUPT;
   } else {
     z->ptr += retval;
   }
 
   /* Verify the header */
   if( header.magic != ZIP_LOCAL_HEADER_SIG ) {
-    return 1;
+    return LIBSPECTRUM_ERROR_SIGNATURE;
   }
 
   version = ( header.required_version & 0xff );
   if( version > ZIP_SUPPORTED_VERSION ) {
-    fprintf( stderr, "Unsupported ZIP version %u.%u", version / 10,
-             version % 10 );
-    return 1;
+    libspectrum_print_error( LIBSPECTRUM_ERROR_SIGNATURE,
+                             "Unsupported ZIP version %u.%u", version / 10,
+                             version % 10 );
+    return LIBSPECTRUM_ERROR_SIGNATURE;
   }
 
   /* Skip the variable fields. Note that we don't bother with matching the rest
@@ -466,19 +464,18 @@ prepare_stream( struct libspectrum_zip *z )
      authorative. */
   skip = header.name_size + header.extra_field_size;
 
-  if( seek( z, skip, SEEK_CUR ) ) {
-    return 1;
-  }
+  error = seek( z, skip, SEEK_CUR );
+  if( error ) return error;
 
-  return 0;
+  return LIBSPECTRUM_ERROR_NONE;
 }
 
 /* Decompress the zlib compressed data */
-static int
+static libspectrum_error
 decompress_stream( struct libspectrum_zip *z, libspectrum_byte **buffer,
                    size_t *buffer_size )
 {
-  int error;
+  libspectrum_error error;
   size_t file_compressed_left;
 
   /* Note that we take the sizes from central directory rather than
@@ -488,24 +485,21 @@ decompress_stream( struct libspectrum_zip *z, libspectrum_byte **buffer,
 
   /* Nothing to do */
   if( file_compressed_left == 0 ) {
-    return 1;
+    return LIBSPECTRUM_ERROR_CORRUPT;
   }
 
   /* Bad archive? */
   if( z->ptr + file_compressed_left > z->end ) {
-    return 1;
+    return LIBSPECTRUM_ERROR_CORRUPT;
   }
 
   error = libspectrum_zip_inflate( z->ptr, file_compressed_left, buffer,
                                    buffer_size );
-
-  if( error != LIBSPECTRUM_ERROR_NONE ) {
-    return 1;
-  }
+  if( error ) return error;
 
   z->ptr += file_compressed_left;
 
-  return 0;
+  return LIBSPECTRUM_ERROR_NONE;
 }
 
 /* Read file from ZIP archive */
@@ -514,10 +508,12 @@ libspectrum_zip_read( struct libspectrum_zip *z, libspectrum_byte **buffer,
                       size_t *size )
 {
   const libspectrum_byte *last = z->ptr;
+  libspectrum_error error;
 
-  if( prepare_stream( z ) ) {
+  error = prepare_stream( z );
+  if( error ) {
     z->ptr = last;
-    return LIBSPECTRUM_ERROR_UNKNOWN;
+    return error;
   }
 
   /* Report EOF when there is no more to read */
@@ -540,7 +536,8 @@ libspectrum_zip_read( struct libspectrum_zip *z, libspectrum_byte **buffer,
 
   case 8: /* deflate */
     if( decompress_stream( z, buffer, size ) ) {
-      fprintf( stderr, "ZIP decompression failed" );
+      libspectrum_print_error( LIBSPECTRUM_ERROR_CORRUPT,
+                               "ZIP decompression failed" );
       z->ptr = last;
       return LIBSPECTRUM_ERROR_CORRUPT;
     }
@@ -548,8 +545,9 @@ libspectrum_zip_read( struct libspectrum_zip *z, libspectrum_byte **buffer,
 
   default:
     z->ptr = last;
-    fprintf( stderr, "Unsupported compression method %u.", compression );
-    return 1;
+    libspectrum_print_error( LIBSPECTRUM_ERROR_INVALID,
+                             "Unsupported compression method %u", compression );
+    return LIBSPECTRUM_ERROR_INVALID;
   }
 
   /* Restore position to allow reading next header in central directory */
@@ -559,7 +557,7 @@ libspectrum_zip_read( struct libspectrum_zip *z, libspectrum_byte **buffer,
   libspectrum_dword file_crc = crc32( 0, *buffer, *size );
 
   if( file_crc != z->file_info.crc ) {
-    fprintf( stderr, "ZIP CRC mismatch" );
+    libspectrum_print_error( LIBSPECTRUM_ERROR_CORRUPT, "ZIP CRC mismatch" );
     return LIBSPECTRUM_ERROR_CORRUPT;
   }
 
@@ -578,7 +576,7 @@ libspectrum_zip_blind_read( const libspectrum_byte *zipptr, size_t ziplength,
   z = libspectrum_zip_open( zipptr, ziplength );
   if( !z ) return LIBSPECTRUM_ERROR_INVALID;
 
-  while( libspectrum_zip_next( z, &info ) == LIBSPECTRUM_ERROR_NONE ) {
+  while( libspectrum_zip_next( z, &info ) == 0 ) {
 
     /* Skip directories and empty files */
     if( !info.size ) continue; 
