@@ -1093,3 +1093,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          add support for reading zip files (patch #343) (Patrik Rak and Sergio).
 20160722 zip.[ch]: use libspectrum functions for reading LSB values (Fred).
 20160722 zip.c: mark a bunch of internal functions as static (Fred).
+20160724 zip.c: make error reporting a bit more libspectrum-like (Fred).
